--- a/aws_deep_learning_practice/Hand-digits classification.ipynb
+++ b/aws_deep_learning_practice/Hand-digits classification.ipynb
@@ -36,20 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rickypark/anaconda3/envs/hongdae-ml-study/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf"
    ]
@@ -684,12 +675,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이중 체크를 위해 테스트 세트를 주입해서 logits 텐서의 결과를 계산합니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_hat = sess.run(logits, feed_dict={X: X_test, y: y_test})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "그런 다음 y_hat 값의 열을 따라 가장 큰 값의 인덱스를 계산합니다. 이 값은 0~5 사이가 되며 y_test에 저장되어 있는 레이블과 동일해야 합니다. 이 두 값을 비교해서 더하면 True만 카운트 되기 때문에 예측이 정확히 맞은 회수를 알 수 있습니다."
    ]
   },
   {
@@ -711,13 +716,6 @@
    "source": [
     "np.sum(np.argmax(y_hat, axis=1) == y_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
