--- a/aws_deep_learning_practice/TensorFlow Basic.ipynb
+++ b/aws_deep_learning_practice/TensorFlow Basic.ipynb
@@ -16,18 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rickypark/anaconda3/envs/hongdae-ml-study/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf"
    ]
@@ -73,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "보통 딥러닝에서 __'텐서'__ 라고 하면 다차원 배열을 의미합니다. 이는 NumPy의 ndarray()와 거의 동급으로 생각할 수 있습니다. 하지만 사실 tf.Tensor는 다차원 배열이 아니고 그런 배열을 가리키는 포인터에 가깝습니다. 좀 더 기술적으로 설명하면 상수 c의 연산 노드('Const:0')를 가리킨다고 말할 수 있습니다.\n",
+    "보통 딥러닝에서 __'텐서'__ 라고 하면 다차원 배열을 의미합니다. 이는 NumPy의 ndarray()와 거의 동급으로 생각할 수 있습니다. 하지만 사실 tf.Tensor는 다차원 배열이 아니고 그런 배열을 가리키는 포인터에 가깝습니다. 좀 더 기술적으로 설명하면 상수 c의 연산 노드('Const')의 첫 번째 출력(':0')을 가리킨다고 말할 수 있습니다.\n",
     "\n",
     "두 개의 상수를 더하는 식을 만들어 보겠습니다."
    ]
@@ -104,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "텐서 e는 덧셈 연산 'add:0'을 가리키고 있습니다. 이렇게 보면 e를 다차원 배열이라고 획일적으로 취급하기가 어렵습니다. 반면 c + d의 계산 결과를 얻기 위해서는 e를 사용하는 것이 맞으므로 흔히 텐서를 다차원 배열로 부릅니다. 보통 텐서, 연산, 연산 노드 등으로 다양하게 혼용하여 부릅니다.\n",
+    "텐서 e는 덧셈 연산의 첫 번째 출력 'add:0'을 가리키고 있습니다. 그런데 아직 값을 가지고 있지 않으므로 e를 단순한 다차원 배열이라고 말하기가 어렵습니다. 반면 c + d의 계산 결과를 얻기 위해서는 e를 사용하는 것이 맞으므로 흔히 텐서를 다차원 배열로 부릅니다. 보통 텐서, 연산, 연산 노드 등으로 다양하게 혼용하여 부릅니다.\n",
     "\n",
     "그럼 이제 실제로 만들어진 그래프를 실행해 보겠습니다. 텐서플로 연산을 실행하기 위해서는 세션(Session) 객체를 만들어 run() 메소드를 호출해야 합니다."
    ]
@@ -134,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "기대했던 3이 출력되었습니다. 연산 e를 계산하기 위해 실행하면 이에 의존하는 c와 d도 계산되어 (그래프 구조의 잇점) 덧셈이 일어납니다. 하지만 c와 d는 여전히 그대로 텐서일 뿐 실제 값을 출력하지 않습니다."
+    "기대했던 3이 출력되었습니다. 연산 e를 계산하기 위해 실행(혹은 평가)하면 이에 의존하는 c와 d도 계산되어 (그래프 구조의 잇점) 덧셈이 일어납니다. 하지만 c와 d는 여전히 그대로 텐서일 뿐 실제 값을 출력하지 않습니다."
    ]
   },
   {
@@ -575,7 +566,7 @@
    ],
    "source": [
     "with tf.Session(graph=g) as sess:\n",
-    "    sess.run('Variable/Assign')\n",
+    "    sess.run('Variable/Assign')   # 혹은 sess.run(v.initializer)\n",
     "    print(sess.run(v))"
    ]
   },
