--- a/aws_deep_learning_practice/Hand-digits classification.ipynb
+++ b/aws_deep_learning_practice/Hand-digits classification.ipynb
@@ -445,11 +445,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "분류 문제에서 대표적으로 사용하는 것이 크로스 엔트로피 손실 함수입니다. 텐서플로에는 로짓과 타깃값을 매개변수로 전달하면 자동으로 크로스 엔트로피 손실 함수를 계산해 주는 함수가 있습니다.\n",
+    "분류 문제에서 대표적으로 사용하는 것이 크로스 엔트로피 손실 함수입니다. 텐서플로에는 로짓(y_hat이 아니고)과 타깃값을 매개변수로 전달하면 자동으로 크로스 엔트로피 손실 함수를 계산해 주는 함수가 있습니다.\n",
+    "\n",
+    "$$J(\\theta)=-\\dfrac{1}{m}\\sum_{i=1}^{m}y\\;log(\\hat{y})$$\n",
     "\n",
     "tf.nn.softmax_cross_entropy_with_logits(labels=.., logits=..) 이 함수는 타깃(label)이 원 핫 인코딩(one_hot_encoding) 되어 있을 때 사용합니다.\n",
     "\n",
     "tf.nn.sparse_softmax_cross_entropy_with_logits(labels=.., logits=..) 이 함수는 타깃(lable)이 1차원 배열일 때 사용할 수 있습니다. 여기서는 y_train이 1차원 배열이므로 이 함수를 사용하겠습니다.\n",
+    "\n",
+    "이 함수들에는 y_hat이 아니고 logits을 넣어주면 되기 때문에 출력층 다음에 softmax 함수를 굳이 넣어 주지 않아도 되어 편리합니다.\n",
     "\n",
     "그리고 미니 배치로 훈련을 하게되므로 계산된 크로스 엔트로피 손실이 미니 배치 개수만큼 반환됩니다. 낱개의 손실 값을 확인하는 것은 큰 의미가 없으므로 미니 배치 전체에 대한 평균값을 계산하겠습니다. tf.reduce_mean()은 입력 텐서의 값을 평균내는 함수입니다. "
    ]
